fixed scrollbar and add a button choose how many verbs to load, but not actually implemented

--- a/public/style.css
+++ b/public/style.css
@@ -19,43 +19,73 @@ button {
     background-color: #383c4a;
 }
 
+#load_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 20px;
+    color: #d3d3d3;
+}
+
+#load_database_count {
+    background-color: rgba(255, 255, 255, 0.1);
+    width: 50px;
+    height: 50px;
+    border: none;
+    text-align: center;
+    color: #d3d3d3;
+}
+
+#load_database_count::-webkit-inner-spin-button,
+#load_database_count::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 #load_database {
     width: 50%;
-    height: 5%;
+    height: 50px;
+    margin-left: 10px;
+    background-color: #4e3a8e;
+    border: none;
+    cursor: pointer;
+}
+
+#load_database:hover {
+    background-color: #634fad;
+}  
+
+#load_database:hover {
+    background-color: #634fad;
 }
 
 #loaded_verbs_list {
-    height: 100vh;
-    overflow: scroll;
+    height: 100%;
     text-align: left;
 }
 
 #loaded_verbs_container {
     padding: 20px;
     font-size: larger;
-    overflow: hidden;
+    overflow-y: scroll;
 }
 
-#loaded_verbs_list::-webkit-scrollbar {
-    display: none;
+#loaded_verbs_container::-webkit-scrollbar {
+    width: 12px;
 }
 
-#loaded_verbs_list::-webkit-scrollbar-track {
-    height: 10px;
+#loaded_verbs_container::-webkit-scrollbar-thumb {
     background-color: transparent;
+    transition: background-color 0.3s;
 }
 
-#loaded_verbs_list::-webkit-scrollbar-thumb {
-    background-color: transparent;
+#loaded_verbs_container:hover::-webkit-scrollbar-thumb {
+    background-color: #4e3a8e;
 }
 
-#loaded_verbs_list:hover::-webkit-scrollbar {
-    display: flex   ;
-}
-
-#loaded_verbs_list:hover::-webkit-scrollbar-thumb {
-    background-color:#4e3a8e;
-    border-radius: 50%;
+#loaded_verbs_container:hover::-webkit-scrollbar {
+    width: 16px;
 }
 
 #center_div {
